force-app/main/default/objects/LLC_BI__Scenario_Item__c/LLC_BI__Scenario_Item__c.object-meta.xml
<CustomObject>
    <description>This object stores any scenario items relating to Treasury Proforma details.</description>
    <label>Scenario Item</label>
    <nameField>
        <label>Services</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scenario Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>