force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Balance_Required_Difference__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Balance_Required_Difference__c</fullName>
    <description>This field is automatically calculated via formula. It stores the difference between your minimum required balance and the competitor&apos;s for this bill point.</description>
    <formula>LLC_BI__Competitor_Balance_Required__c - LLC_BI__Balance_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Required Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>