force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Bill_Point__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Bill_Point__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is automatically populated whenever a proforma is created. It specifies the bill point associated with the scenario item.</description>
    <label>Bill Point</label>
    <referenceTo>LLC_BI__Bill_Point__c</referenceTo>
    <relationshipLabel>Scenario Items</relationshipLabel>
    <relationshipName>Scenario_Items</relationshipName>
    <type>Lookup</type>
</CustomField>