force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Current_Volume__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Current_Volume__c</fullName>
    <defaultValue>NULL</defaultValue>
    <description>Financial institutions automatically populate this Number field with information using their own system to track current bill point volumes on any given treasury service. By default, the value is null.</description>
    <label>Current Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>