force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Discount_Percent__c</fullName>
    <description>This field is populated automatically via formula. It stores the total discount percentage for a bill point.</description>
    <formula>IF(LLC_BI__Standard_Price__c != 0, 1 - (BLANKVALUE(LLC_BI__Exception_Price__c, LLC_BI__Standard_Price__c) / LLC_BI__Standard_Price__c), 0)</formula>
    <label>Discount (%)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>