force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Expiration_Date__c</fullName>
    <description>This field indicates the expiration date of the bill point.</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>