force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Is_Bundle_Exception__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Bundle_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when this scenario item is created to overwrite an existing bill point and it&apos;s standard price.</description>
    <label>Is Bundle Exception</label>
    <type>Checkbox</type>
</CustomField>