force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Product__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product__c</fullName>
    <description>This is a required text field that is automatically populated via a trigger when the proforma is created. It looks up to the bill point associated with this record and populates the value with either the LLC_BI__Product__c or LLC_BI__Product_Type__c, depending on which one is populated.</description>
    <label>Product / Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>