force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Product_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product_Type_Name__c</fullName>
    <description>The product type parent for the scenario item bill point.</description>
    <label>Product Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>