force-app/main/default/objects/LLC_BI__Scenario_Item__c/fields/LLC_BI__Volumes__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Volumes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is optional. It is populated manually in the proforma. It stores the number of units requested for this bill point.</description>
    <label>Volumes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>